# codekata

./: .gitignore  5star.txt  7star.txt  Makefile  README.md  qsudoku.c
anagrams/: README.md  SConstruct  anagrams_hash.c  anagrams_sisterlink.c  memprint.c  memprint.h  meson.build  sisterlinkedtree.c  sisterlinkedtree.h  stringsort.c  stringsort.h
anagrams_multiword/: anagrams_hash.cpp  anagrams_trie.cpp  format.hpp  meson.build  multiwordgrams.cpp  trie.cpp  trie.hpp
bitcounts/: .gitignore  Makefile  README.md  bc_cached.c  bc_parallelsum.c  mmaputil.c  mmaputil.h
cachebenchmark/: .gitignore  branch_timing.cpp  cache_timing.cpp  countutils.cpp  countutils.h  meson.build  timing.cpp
medians/: .gitignore  README.md  medians.hpp  meson.build  opcount.cpp  tests.cpp  timing.cpp
paxos/: README.md  basicnode.py  comm.py  requests.py  responses.py  test_cluster.py  test_singlenode.py
raytracer/: README.md  meson.build
raytracer/src/: clplat.cpp  clplat.hpp  linalg.hpp  linalg_plain.hpp  linalg_sse.hpp  main.cpp  meson.build  renderer.cl  spherecast.cpp  spherecast.hpp
sudoku/: .gitignore  4star.txt  5star2.txt  README.md  meson.build  qsudoku.c  sample2.txt
wordchain/: README.md  chain.py  dictionary.py
