project('anagrams', 'cpp')
add_global_arguments('-std=c++17', language : 'cpp')

multiwordgrams = executable('multiwordgrams',
        'multiwordgrams.cpp',
        'trie.cpp')

anagrams_trie = executable('anagrams_trie',
        'anagrams_trie.cpp',
        'trie.cpp')

anagrams_trie = executable('anagrams_hash',
        'anagrams_hash.cpp')
